--- a/app/css/main.css
+++ b/app/css/main.css
@@ -6,3 +6,104 @@ body, html {
 	margin: 0px;
 	padding: 0px;
 }
+
+html {
+	height: 100%;
+}
+
+body {
+	font-family: 'Open Sans';
+	width: 100%;
+	height: 100%;
+	/*background-image: linear-gradient(to top, rgba(44, 51, 69, 1) 0%, rgba(55, 126, 146, 1) 100%);*/
+  	color: #DBDBDB;
+  	overflow: hidden;
+}
+
+body:before {
+	content: "";
+	width: 100%;
+	height: 100%;
+	-webkit-filter: blur(10px);
+	position: absolute;
+	z-index: -1;
+	background-image: url(../images/Hotel-Bar-Interior-Design-HD-Wallpapers-in-HD.jpg);
+	background-size: cover;
+}
+
+.login-container {
+
+}
+
+.login-container span.fa-glass {
+	font-size: 45px;
+	margin: 100px 0px 90px -30px;	
+/*	-ms-transform: rotate(40deg); 
+    -webkit-transform: rotate(40deg);
+    -moz-transform: rotate(40deg);
+    -o-transform: rotate(40deg);
+    transform: rotate(40deg);*/
+}
+
+.login-container .logo {
+	text-align: center;
+}
+
+.login-container span.title {
+	text-shadow: 1px 1px 1px rgba(0,0,0,0.3);
+ 	font-size: 20px;
+}
+
+.login-container .form-container {
+	margin: 0 auto;
+	width: 310px;
+	text-align: center;
+	background-color: rgba(0,0,0,0.4);
+  	padding: 1px 0px 20px 0px;
+  	box-shadow: 1px 1px 1px 0px rgba(0,0,0,0.3);
+}
+
+.login-container .form-container form {
+	line-height: 30px;
+  	margin-bottom: 20px;
+}
+
+.login-container .form-container form ul {
+	list-style: none;
+ 	padding: 0px;
+}
+
+.login-container .form-container form ul li {
+	border-bottom: 2px solid #A9A9A9;
+	width: 80%;
+	margin: 0 auto;
+}
+
+.login-container .form-container form ul li .fa {
+	float: left;
+	padding: 8px 0px;
+}
+
+.login-container .form-container form ul li .text-box {
+	border: 0px;
+	background: transparent;
+	color: rgb(200, 200, 200);
+	font-size: 15px;
+	font-weight: 500;
+	width: 80%;
+	height: 30px;
+	outline: none;
+}
+
+.login-container .form-container button {
+	border: 0px;
+	background-color: #16A086;
+	width: 80%;
+	height: 30px;
+	box-shadow: 0px 1px 1px 0px rgba(0,0,0,0.3);
+	color: white;
+	font-family: sans-serif;
+	font-size: 15px;
+	cursor: pointer;
+	outline: none;
+}
